prefer `.toList` // fix warning in TypeReference // slightly optimize JdkMethodRef